--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -25,13 +25,13 @@
     <!-- BEGIN login-container -->
     <div class="login-container">
       <div class="w-100 text-center">
-        <img src="imgs/{{razon_social.logo}}" alt="Logo" height="140px" />
+        <img src="imgs/{{configuracion.logo}}" alt="Logo" height="140px" />
       </div>
       <!-- BEGIN login-header -->
       <div class="login-header">
         <div class="brand">
           <div class="d-flex align-items-center">
-            <b>{{razon_social.nombre}}</b>
+            <b>{{configuracion.nombre}}</b>
           </div>
         </div>
 
