--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -51,6 +51,7 @@
               class="form-control fs-13px h-45px border-0"
               placeholder="Usuario"
               id="name"
+              autofocus
             />
             <label
               for="name"
