--- a/src/views/partials/includes/menu/menu_admin.hbs
+++ b/src/views/partials/includes/menu/menu_admin.hbs
@@ -30,6 +30,16 @@
   </div>
 </div>
 
+
+<div class="menu-item {{#if_equal pagina.actual "users"}} active {{/if_equal}}">
+    <a href="{{urlbase}}/users" class="menu-link">
+        <div class="menu-icon">
+        <i class="fa fa-users"></i>
+        </div>
+        <div class="menu-text">Usuarios</div>
+    </a>
+</div>
+
 <div class="menu-item {{#if_equal pagina.actual "configuracions"}} active {{/if_equal}}">
     <a href="{{urlbase}}/configuracions" class="menu-link">
         <div class="menu-icon">
