--- a/src/views/layouts/app.hbs
+++ b/src/views/layouts/app.hbs
@@ -122,7 +122,7 @@
 				</div> --}}
 				<div class="navbar-item navbar-user dropdown">
 					<a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
-						<img src="{{urlbase}}/template/assets/img/user/user-13.jpg" alt="" /> 
+						<img src="{{urlbase}}/imgs/users/{{checkPhoto user.foto}}" alt="" /> 
 						<span class="d-none d-md-inline">{{nombreUsuario}}</span> <b class="caret ms-6px"></b>
 					</a>
 					<div class="dropdown-menu dropdown-menu-end me-1">
@@ -149,7 +149,7 @@
 						<a href="javascript:;" class="menu-profile-link" data-toggle="app-sidebar-profile" data-target="#appSidebarProfileMenu">
 							<div class="menu-profile-cover with-shadow"></div>
 							<div class="menu-profile-image">
-								<img src="{{urlbase}}/template/assets/img/user/user-13.jpg" alt="" />
+								<img src="{{urlbase}}/imgs/users/{{checkPhoto user.foto}}" alt="" />
 							</div>
 							<div class="menu-profile-info">
 								<div class="d-flex align-items-center">
