--- a/src/views/users/index.hbs
+++ b/src/views/users/index.hbs
@@ -1,105 +1,85 @@
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Usuarios</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="/home">Inicio</a></li>
-                    <li class="breadcrumb-item active">Usuarios</li>
-                </ol>
-            </div>
-        </div>
-    </div>
-</div>
+<!-- BEGIN breadcrumb -->
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><a href="javascript:;">Inicio</a></li>
+  <li class="breadcrumb-item active">Usuarios</li>
+</ol>
+<!-- END breadcrumb -->
+<!-- BEGIN page-header -->
+<h1 class="page-header">Usuarios</h1>
+<!-- END page-header -->
 
-<section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        <a href="{{urlbase}}/users/create" class="btn btn-info"><i class="fa fa-plus"></i> Nuevo</a>
-                    </div>
-                    <!-- /.card-header -->
-                    <div class="card-body">
-                        <table id="example2" class="table data-table table-bordered table-hover">
-                            <thead>
-                                <tr>
-                                    <th>Nombre</th>
-                                    <th>Usuario</th>
-                                    <th>C.I.</th>
-                                    <th>Teléfono/Celular</th>
-                                    <th>Correo</th>
-                                    <th>Foto</th>
-                                    <th>Tipo</th>
-                                    <th>Opciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {{#each usuarios}}
-                                <tr>
-                                    <td>{{this.nombre}} {{this.paterno}} {{this.materno}}</td>
-                                    <td>{{this.usuario}}</td>
-                                    <td>{{this.ci}} {{this.ci_exp}}</td>
-                                    <td>{{this.fono}} / {{this.cel}}</td>
-                                    <td>{{this.email}}</td>
-                                    <td><img src="{{urlbase}}/imgs/users/{{this.foto}}" alt="Foto" class="img-table"></td>
-                                    <td>{{this.tipo}}</td>
-                                    <td class="btns-opciones">
+<div class="row">
+    <div class="col-md-12">
+        <!-- BEGIN panel -->
+        <div class="panel panel-inverse">
+            <!-- BEGIN panel-heading -->
+            <div class="panel-heading">
+                <h4 class="panel-title btn-nuevo"><a href="{{urlbase}}/users/create" class="btn btn-primary"><i class="fa fa-plus"></i> Nuevo</a></h4>
+                <div class="panel-heading-btn">
+                    <a href="javascript:;" class="btn btn-xs btn-icon btn-default" data-toggle="panel-expand"><i class="fa fa-expand"></i></a>
+                    <a href="javascript:;" class="btn btn-xs btn-icon btn-success" data-toggle="panel-reload"><i class="fa fa-redo"></i></a>
+                    <a href="javascript:;" class="btn btn-xs btn-icon btn-warning" data-toggle="panel-collapse"><i class="fa fa-minus"></i></a>
+                </div>
+            </div>
+            <!-- END panel-heading -->
+            <!-- BEGIN panel-body -->
+            <div class="panel-body">
+                <table id="data-table-responsive" width="100%" class="table table-striped table-bordered align-middle text-nowrap tabla_datos">
+                    <thead>
+                        <tr>
+                            <th width="1%"></th>
+                            <th width="1%" data-orderable="false"></th>
+                            <th class="text-nowrap">Usuario</th>
+                            <th class="text-nowrap">Nombre Completo</th>
+                            <th class="text-nowrap">C.I.</th>
+                            <th class="text-nowrap">Dirección</th>
+                            <th class="text-nowrap">Teléfono</th>
+                            <th class="text-nowrap">Tipo</th>
+                            <th class="text-nowrap">Acceso</th>
+                            <th class="text-nowrap">Acción</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                        {{#each usuarios}}
+                        <tr class="odd gradeX">
+                            <td width="1%" class="fw-bold">{{this.id}}</td>
+                            <td width="1%"><img src="{{urlbase}}/imgs/users/{{checkPhoto this.foto}}" class="rounded h-30px my-n1 mx-n1" /></td>
+                            <td>{{this.usuario}}</td>
+                            <td>{{this.nombre}} {{this.paterno}} {{this.materno}}</td>
+                            <td>{{this.ci}} {{this.ci_exp}}</td>
+                            <td>{{this.dir}}</td>
+                            <td>{{this.fono}}</td>
+                            <td>{{this.tipo}}</td>
+                            <td>{{this.acceso}}</td>
+                            <td class="btns-opciones">
                                         <a href="{{urlbase}}/users/edit/{{this.id}}" class="modificar"><i class="fa fa-edit" data-toggle="tooltip" data-placement="left" title="Modificar"></i></a>
     
-                                        <a href="#" data-url="{{urlbase}}/users/destroy/{{this.user_id}}" data-toggle="modal" data-target="#modal-eliminar" class="eliminar"><i class="fa fa-trash" data-toggle="tooltip" data-placement="left" title="Eliminar"></i></a>
-                                    </td>
-                                </tr>
-                                {{/each}}
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-              <!-- /.card -->
+                                        <a href="#" data-url="{{urlbase}}/users/destroy/{{this.user_id}}" class="eliminar"><i class="fa fa-trash" data-toggle="tooltip" data-placement="left" title="Eliminar"></i></a>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
             </div>
-            <!-- /.col -->
+            <!-- END panel-body -->
         </div>
-        <!-- /.row -->
+        <!-- END panel -->
     </div>
-</section>
+</div>
 
 {{> modal/eliminar}}
 
 {{#section 'scripts'}}
-<script>
-     $('table.data-table').DataTable({
-        responsive: true,
-        order:[
-            [0,'asc']
-        ],
-        columns : [
-            null,
-            {width:"10%"},
-            null,
-            {width:"10%"},
-            {width:"14%"},
-            {width:"5%"},
-            {width:"10%"},
-            {width:"10%"},
-        ],
-        scrollCollapse: true,
-        language: lenguaje,
-        pageLength:25
-    });
-
- 
+<script> 
     // ELIMINAR
-    $(document).on('click','table tbody tr td.btns-opciones a.eliminar',function(e){
+    $(document).on('click','table.tabla_datos a.eliminar',function(e){
         e.preventDefault();
-        let usuario = $(this).parents('tr').children('td').eq(0).text();
+        let usuario = $(this).parents('tr').children('td').eq(2).text();
         $('#mensajeEliminar').html(`¿Está seguro(a) de eliminar al usuario <b>${usuario}</b>?`);
         let url = $(this).attr('data-url');
         console.log($(this).attr('data-url'));
         $('#formEliminar').prop('action',url);
+        $("#modal-eliminar").modal("show");
     });
 
     $('#btnEliminar').click(function(){
