Avance crud usuarios

--- a/src/views/partials/modal/eliminar.hbs
+++ b/src/views/partials/modal/eliminar.hbs
@@ -1,10 +1,9 @@
 <div class="modal fade" id="modal-eliminar">
     <div class="modal-dialog">
-      <div class="modal-content bg-danger">
-        <div class="modal-header">
+      <div class="modal-content">
+        <div class="modal-header bg-danger text-white">
             <h4 class="modal-title" id="txtTituloEliminar">Eliminar registro</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
           </button>
         </div>
         <div class="modal-body">
@@ -13,8 +12,8 @@
             <p id="mensajeEliminar"></p>
         </div>
         <div class="modal-footer justify-content-between">
-          <button type="button" class="btn btn-outline-light" data-dismiss="modal">No, cancelar</button>
-          <button type="button" class="btn btn-outline-light" id="btnEliminar">Si, eliminar</button>
+          <button type="button" class="btn btn-white" data-bs-dismiss="modal">No, cancelar</button>
+          <button type="button" class="btn btn-danger" id="btnEliminar">Si, eliminar</button>
         </div>
       </div>
       <!-- /.modal-content -->
