--- a/src/views/layouts/app.hbs
+++ b/src/views/layouts/app.hbs
@@ -14,6 +14,8 @@
 	<!-- ================== END core-css ================== -->
 
 	<!-- ================== BEGIN page-css ================== -->
+	
+	<link href="{{urlbase}}/template/assets/plugins/switchery/dist/switchery.min.css" rel="stylesheet" />
 	<link href="{{urlbase}}/template/assets/plugins/datatables.net-bs5/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
 	<link href="{{urlbase}}/template/assets/plugins/datatables.net-responsive-bs5/css/responsive.bootstrap5.min.css" rel="stylesheet" />
 	<link href="{{urlbase}}/template/assets/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" />
@@ -233,6 +235,7 @@
 	<script src="{{urlbase}}/template/assets/plugins/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 	<script src="{{urlbase}}/template/assets/plugins/datatables.net-responsive-bs5/js/responsive.bootstrap5.min.js"></script>
 	<script src="{{urlbase}}/template/assets/js/demo/table-manage-responsive.demo.js"></script>
+	<script src="{{urlbase}}/template/assets/plugins/switchery/dist/switchery.min.js"></script>
 	<script src="{{urlbase}}/template/assets/plugins/gritter/js/jquery.gritter.js"></script>
 	<script src="{{urlbase}}/template/assets/plugins/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="{{urlbase}}/template/assets/js/demo/ui-modal-notification.demo.js"></script>
