Avance analisis finalizado

--- a/src/views/partials/includes/menu/menu_admin.hbs
+++ b/src/views/partials/includes/menu/menu_admin.hbs
@@ -13,17 +13,17 @@
         >Inventario</div></a>
     </div>
     <div class="menu-item">
-      <a href="index_v2.html" class="menu-link"><div
+      <a href="{{urlbase}}/analisis/proveedors" class="menu-link"><div
           class="menu-text"
         >Proveedores</div></a>
     </div>
     <div class="menu-item">
-      <a href="index_v3.html" class="menu-link"><div
+      <a href="{{urlbase}}/analisis/ventas" class="menu-link"><div
           class="menu-text"
         >Ventas</div></a>
     </div>
     <div class="menu-item">
-      <a href="index_v3.html" class="menu-link"><div
+      <a href="{{urlbase}}/analisis/clientes" class="menu-link"><div
           class="menu-text"
         >Clientes</div></a>
     </div>
