--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -31,10 +31,9 @@
       <div class="login-header">
         <div class="brand">
           <div class="d-flex align-items-center">
-            <b>{{configuracion.nombre}}</b>
+            <b>{{configuracion.razon_social}}</b>
           </div>
         </div>
-
         <div class="icon">
           <i class="fa fa-lock"></i>
         </div>
